--- a/index.html
+++ b/index.html
@@ -8,5 +8,5 @@
 <tr>
 <th>題名</th><th>著者</th><th>読み手</th><th>容量</th><th>再生時間</th><th>リンク</th>
 </tr>
-<tr><td>葬式の行列</td><td>田中貢太郎</td><td>ずんだもん</td><td>None</td><td>56.66258333333333</td><td><a href="https://drive.google.com/file/d/129bSRVSzUN6l641IVRDro7N5Q_nThA9w&export=download">https://drive.google.com/file/d/129bSRVSzUN6l641IVRDro7N5Q_nThA9w</a></td></tr>
+<tr><td>『注文の多い料理店』序</td><td>宮沢賢治</td><td>ずんだもん</td><td>None</td><td>93.0865</td><td><a href="https://drive.google.com/uc?export=download&id=1BxmEWXPvXaKsDUOOP5tIGBECommbDqpH">https://drive.google.com/uc?export=download&id=1BxmEWXPvXaKsDUOOP5tIGBECommbDqpH</a></td></tr>
 </table></body></html>
