--- a/index.html
+++ b/index.html
@@ -8,5 +8,5 @@
 <tr>
 <th>題名</th><th>著者</th><th>読み手</th><th>容量</th><th>再生時間</th><th>リンク</th>
 </tr>
-<tr><td>『注文の多い料理店』序</td><td>宮沢賢治</td><td>ずんだもん</td><td>None</td><td>93.0865</td><td><a href="https://drive.google.com/uc?export=download&id=1BxmEWXPvXaKsDUOOP5tIGBECommbDqpH">https://drive.google.com/uc?export=download&id=1BxmEWXPvXaKsDUOOP5tIGBECommbDqpH</a></td></tr>
+<tr><td>懐中時計</td><td>土原耕作</td><td>ずんだもん</td><td>None</td><td>31.418833333333332</td><td><a href="https://drive.google.com/uc?export=download&id=1PVvwy41prEe8CtOopKg6dX-VMJTZF-QO">https://drive.google.com/uc?export=download&id=1PVvwy41prEe8CtOopKg6dX-VMJTZF-QO</a></td></tr>
 </table></body></html>
