--- a/index.html
+++ b/index.html
@@ -8,19 +8,5 @@
 <tr>
 <th>題名</th><th>著者</th><th>読み手</th><th>容量</th><th>再生時間</th><th>リンク</th>
 </tr>
-<tr><td>懐中時計</td><td>土原耕作</td><td>四国めたん</td><td>1.25 MB</td><td>0:00:27</td><td><a href="https://drive.google.com/uc?export=download&id=1A1HKcsVBqu3kw-CmnTGBBIeY6M2jxsTc">https://drive.google.com/uc?export=download&id=1A1HKcsVBqu3kw-CmnTGBBIeY6M2jxsTc</a></td></tr>
-<tr><td>懐中時計</td><td>土原耕作</td><td>ずんだもん</td><td>1.44 MB</td><td>0:00:31</td><td><a href="https://drive.google.com/uc?export=download&id=1BpyJqXeHEAW34LIAna5gbC2h2ZySfNdM">https://drive.google.com/uc?export=download&id=1BpyJqXeHEAW34LIAna5gbC2h2ZySfNdM</a></td></tr>
-</table></body></html><!DOCTYPE html>
-<head>
-<meta charset="UTF-8">
-<title>インデックス</title>
-</head>
-<body>
-<table border="2">
-<tr>
-<th>題名</th><th>著者</th><th>読み手</th><th>容量</th><th>再生時間</th><th>リンク</th>
-</tr>
-<tr><td>懐中時計</td><td>土原耕作</td><td>四国めたん</td><td>1.25 MB</td><td>0:00:27</td><td><a href="https://drive.google.com/uc?export=download&id=1A1HKcsVBqu3kw-CmnTGBBIeY6M2jxsTc">https://drive.google.com/uc?export=download&id=1A1HKcsVBqu3kw-CmnTGBBIeY6M2jxsTc</a></td></tr>
-<tr><td>懐中時計</td><td>土原耕作</td><td>ずんだもん</td><td>1.44 MB</td><td>0:00:31</td><td><a href="https://drive.google.com/uc?export=download&id=1BpyJqXeHEAW34LIAna5gbC2h2ZySfNdM">https://drive.google.com/uc?export=download&id=1BpyJqXeHEAW34LIAna5gbC2h2ZySfNdM</a></td></tr>
-<tr><td>医者と病人</td><td>香倶土三鳥</td><td>ずんだもん</td><td>850.17 KB</td><td>0:00:18</td><td><a href="https://drive.google.com/uc?export=download&id=1vvBuV0dNn-Whbaf_HaW7gs-aeikCV605">https://drive.google.com/uc?export=download&id=1vvBuV0dNn-Whbaf_HaW7gs-aeikCV605</a></td></tr>
+<tr><td>医者と病人</td><td>香倶土三鳥</td><td>剣崎雌雄</td><td>738.17 KB</td><td>0:00:15</td><td><a href="https://drive.google.com/uc?export=download&id=16W1D03s_SN9rHF1egLIh7L1We_jJcnMp">https://drive.google.com/uc?export=download&id=16W1D03s_SN9rHF1egLIh7L1We_jJcnMp</a></td></tr>
 </table></body></html>
