--- a/index.html
+++ b/index.html
@@ -8,5 +8,5 @@
 <tr>
 <th>題名</th><th>著者</th><th>読み手</th><th>容量</th><th>再生時間</th><th>リンク</th>
 </tr>
-<tr><td>医者と病人</td><td>香倶土三鳥</td><td>剣崎雌雄</td><td>738.17 KB</td><td>0:00:15</td><td><a href="https://drive.google.com/uc?export=download&id=16W1D03s_SN9rHF1egLIh7L1We_jJcnMp">https://drive.google.com/uc?export=download&id=16W1D03s_SN9rHF1egLIh7L1We_jJcnMp</a></td></tr>
+<tr><td>『注文の多い料理店』序</td><td>宮沢賢治</td><td>ずんだもん</td><td>4.23 MB</td><td>0:01:32</td><td><a href="https://drive.google.com/uc?export=download&id=16IVT2jV5Ce-dr6maCuQozAVHbayXW-bc">https://drive.google.com/uc?export=download&id=16IVT2jV5Ce-dr6maCuQozAVHbayXW-bc</a></td></tr>
 </table></body></html>
