Update html add content

--- a/index.html
+++ b/index.html
@@ -1,24 +1,2 @@
-<!DOCTYPE html>
-<head>
-<meta charset="UTF-8">
-<title>インデックス</title>
-</head>
-<body>
-<table border="2">
-<tr>
-<th>題名</th><th>著者</th><th>読み手</th><th>容量</th><th>再生時間</th><th>リンク</th>
-</tr>
-<tr><td>葬式の行列</td><td>田中貢太郎</td><td>四国めたん</td><td>2.27 MB</td><td>0:00:49</td><td><a href="https://drive.google.com/uc?export=download&id=1P44JZ7RmbhO_jNs_ttEjYzY_Tm2v7NPg">https://drive.google.com/uc?export=download&id=1P44JZ7RmbhO_jNs_ttEjYzY_Tm2v7NPg</a></td></tr>
-<!DOCTYPE html>
-<head>
-<meta charset="UTF-8">
-<title>インデックス</title>
-</head>
-<body>
-<table border="2">
-<tr>
-<th>題名</th><th>著者</th><th>読み手</th><th>容量</th><th>再生時間</th><th>リンク</th>
-</tr>
-<tr><td>医者と病人</td><td>香倶土三鳥</td><td>冥鳴ひまり</td><td>756.67 KB</td><td>0:00:16</td><td><a href="https://drive.google.com/uc?export=download&id=1z-VrZ3QsM5QXauWgykiVB_VA1gym2Elw">https://drive.google.com/uc?export=download&id=1z-VrZ3QsM5QXauWgykiVB_VA1gym2Elw</a></td></tr>
-<tr><td>酒虫</td><td>芥川竜之介</td><td>ずんだもん</td><td>60.17 MB</td><td>0:21:54</td><td><a href="https://drive.google.com/uc?export=download&id=1R4OBv4aZwgpV9dgJcfbpF-r5ZwAhaP1a">https://drive.google.com/uc?export=download&id=1R4OBv4aZwgpV9dgJcfbpF-r5ZwAhaP1a</a></td></tr>
+<tr><td>貉</td><td>小泉八雲</td><td>四国めたん</td><td>8.86 MB</td><td>0:03:13</td><td><a href="https://drive.google.com/uc?export=download&id=1usIGdqzHRr9cBBrc_0sKw0b_kyameKXa">https://drive.google.com/uc?export=download&id=1usIGdqzHRr9cBBrc_0sKw0b_kyameKXa</a></td></tr>
 </table></body></html>
