--- a/index.html
+++ b/index.html
@@ -4,5 +4,5 @@
 <tr>
 <th>題名</th><th>著者</th><th>読み手</th><th>容量</th><th>再生時間</th><th>リンク</th>
 </tr>
-<tr><td>食物として</td><td>芥川竜之介</td><td>ずんだもん</td><td>3.59 MB</td><td>0:01:18</td><td><a href="https://drive.google.com/uc?export=download&id=1pIxEJHXsWqQmcVW4W_8S0MmZ9RcMHTII">https://drive.google.com/uc?export=download&id=1pIxEJHXsWqQmcVW4W_8S0MmZ9RcMHTII</a></td></tr>
+<tr><td>食物として</td><td>芥川竜之介</td><td>四国めたん</td><td>3.59 MB</td><td>0:01:18</td><td><a href="https://drive.google.com/uc?export=download&id=1AmOD6UlDrpN0Acg0TiouMg--wOfmsuVD">https://drive.google.com/uc?export=download&id=1AmOD6UlDrpN0Acg0TiouMg--wOfmsuVD</a></td></tr>
 </table></body></html>
