--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><html lang="ja"><head><meta charset="UTF-8"><title>インデックス</title></head>
+<!DOCTYPE html><html lang="ja"><head><meta charset="UTF-8"><title>インデックス</title><link rel="stylesheet" href="style.css"></head>
 <body>
 <table border="2">
 <tr>
