--- a/index.html
+++ b/index.html
@@ -1,11 +1,8 @@
-<!DOCTYPE html><html lang="ja"><head><meta charset="UTF-8"><title>インデックス</title><link rel="stylesheet" href="style.css"></head>
+<!DOCTYPE html><html lang="ja"><head><meta charset="UTF-8"><title>インデックス</title></head>
 <body>
 <table border="2">
 <tr>
 <th>題名</th><th>著者</th><th>読み手</th><th>容量</th><th>再生時間</th><th>リンク</th>
 </tr>
-<tr><td>食物として</td><td>芥川竜之介</td><td>四国めたん</td><td>3.59 MB</td><td>0:01:18</td><td><a href="https://drive.google.com/uc?export=download&id=1BBCwQFtbwcN6IX87k_8oetREDHjDfhhe">https://drive.google.com/uc?export=download&id=1BBCwQFtbwcN6IX87k_8oetREDHjDfhhe</a></td></tr>
-<tr><td>食物として</td><td>芥川竜之介</td><td>四国めたん</td><td>3.59 MB</td><td>0:01:18</td><td><a href="https://drive.google.com/uc?export=download&id=1lVutMKZ6FmE3NNA7YpEkTflEYiRUr93R">https://drive.google.com/uc?export=download&id=1lVutMKZ6FmE3NNA7YpEkTflEYiRUr93R</a></td></tr>
-<tr><td>「晩年」と「女生徒」</td><td>太宰治</td><td>ずんだもん</td><td>6.38 MB</td><td>0:02:19</td><td><a href="https://drive.google.com/uc?export=download&id=1bzGLecX0e3WAjcRJYCKFWLTXQtBlTtOc">https://drive.google.com/uc?export=download&id=1bzGLecX0e3WAjcRJYCKFWLTXQtBlTtOc</a></td></tr>
-<tr><td>『吾輩は猫である』上篇自序</td><td>夏目漱石</td><td>四国めたん</td><td>5.53 MB</td><td>0:01:05</td><td><a href="https://drive.google.com/uc?export=download&id=1P6Ky01X4z31OjstgxGk_Zj2a6eXcb6yd">https://drive.google.com/uc?export=download&id=1P6Ky01X4z31OjstgxGk_Zj2a6eXcb6yd</a></td></tr>
+<tr><td>羅生門</td><td>芥川竜之介</td><td>ずんだもん</td><td>48.84 MB</td><td>0:09:40</td><td><a href="https://drive.google.com/uc?export=download&id=1jMHyopTW7-t9kQ-L0g4GWc5LLksA9cjZ">https://drive.google.com/uc?export=download&id=1jMHyopTW7-t9kQ-L0g4GWc5LLksA9cjZ</a></td></tr>
 </table></body></html>
