--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
-<!DOCTYPE html><html lang="ja"><head><meta charset="UTF-8"><title>インデックス</title></head>
+<!DOCTYPE html><html lang="ja"><head><meta charset="UTF-8"><title>インデックス</title><link rel="stylesheet" href="style.css"></head>
 <body>
 <table border="2">
 <tr>
 <th>題名</th><th>著者</th><th>読み手</th><th>容量</th><th>再生時間</th><th>リンク</th>
 </tr>
-<tr><td>羅生門</td><td>芥川竜之介</td><td>ずんだもん</td><td>48.84 MB</td><td>0:09:40</td><td><a href="https://drive.google.com/uc?export=download&id=1jMHyopTW7-t9kQ-L0g4GWc5LLksA9cjZ">https://drive.google.com/uc?export=download&id=1jMHyopTW7-t9kQ-L0g4GWc5LLksA9cjZ</a></td></tr>
+<tr><td>形</td><td>菊池寛</td><td>ずんだもん</td><td>14.31 MB</td><td>0:02:50</td><td><a href="https://drive.google.com/uc?export=download&id=13kP5yOnwi7mD4V9ijThnw6A6_Ukkig_b">https://drive.google.com/uc?export=download&id=13kP5yOnwi7mD4V9ijThnw6A6_Ukkig_b</a></td></tr>
 </table></body></html>
