--- a/index.html
+++ b/index.html
@@ -5,4 +5,5 @@
 <th>題名</th><th>著者</th><th>読み手</th><th>容量</th><th>再生時間</th><th>リンク</th>
 </tr>
 <tr><td>形</td><td>菊池寛</td><td>ずんだもん</td><td>14.31 MB</td><td>0:02:50</td><td><a href="https://drive.google.com/uc?export=download&id=13kP5yOnwi7mD4V9ijThnw6A6_Ukkig_b">https://drive.google.com/uc?export=download&id=13kP5yOnwi7mD4V9ijThnw6A6_Ukkig_b</a></td></tr>
+<tr><td>貉</td><td>小泉八雲</td><td>ずんだもん</td><td>12.59 MB</td><td>0:02:29</td><td><a href="https://drive.google.com/uc?export=download&id=1up3oQ-n9P2Eb527O9iLiQSj_aQMNVcGD">https://drive.google.com/uc?export=download&id=1up3oQ-n9P2Eb527O9iLiQSj_aQMNVcGD</a></td></tr>
 </table></body></html>
