--- a/index.html
+++ b/index.html
@@ -5,4 +5,5 @@
 <th>題名</th><th>著者</th><th>読み手</th><th>容量</th><th>再生時間</th><th>リンク</th>
 </tr>
 <tr><td>『吾輩は猫である』上篇自序</td><td>夏目漱石</td><td>ずんだもん</td><td>5.4 MB</td><td>0:01:57</td><td><a href="https://drive.google.com/uc?export=download&id=1dIIfCKyaub9SWZziLec0sUZs6mqc_NSI">https://drive.google.com/uc?export=download&id=1dIIfCKyaub9SWZziLec0sUZs6mqc_NSI</a></td></tr>
+<tr><td>葬式の行列</td><td>田中貢太郎</td><td>ずんだもん</td><td>2.38 MB</td><td>0:00:52</td><td><a href="https://drive.google.com/uc?export=download&id=1rLj4RQp12NU_jZCKIp6__dv4cbgtEKfR">https://drive.google.com/uc?export=download&id=1rLj4RQp12NU_jZCKIp6__dv4cbgtEKfR</a></td></tr>
 </table></body></html>
