--- a/index.html
+++ b/index.html
@@ -12,4 +12,5 @@
 <tr><td>船中八策</td><td>坂本竜馬</td><td>ずんだもん</td><td>3.31 MB</td><td>0:01:12</td><td><a href="https://drive.google.com/uc?export=download&id=1aPmBAFnK6uzEEK6-YBtOvoNArv1W-t3K">https://drive.google.com/uc?export=download&id=1aPmBAFnK6uzEEK6-YBtOvoNArv1W-t3K</a></td></tr>
 <tr><td>『注文の多い料理店』序</td><td>宮沢賢治</td><td>ずんだもん</td><td>4.05 MB</td><td>0:01:28</td><td><a href="https://drive.google.com/uc?export=download&id=1500Yst_CrFL7S9p1vxEkG2qI9aii8vXb">https://drive.google.com/uc?export=download&id=1500Yst_CrFL7S9p1vxEkG2qI9aii8vXb</a></td></tr>
 <tr><td>「黒死館殺人事件」著者之序</td><td>小栗虫太郎</td><td>ずんだもん</td><td>9.47 MB</td><td>0:03:26</td><td><a href="https://drive.google.com/uc?export=download&id=162Rt1eYQ2K7orTXG1yaTKXKcBt968PFN">https://drive.google.com/uc?export=download&id=162Rt1eYQ2K7orTXG1yaTKXKcBt968PFN</a></td></tr>
+<tr><td>名人伝</td><td>中島敦</td><td>四国めたん</td><td>43.97 MiB</td><td>0:16:00</td><td><a href="https://drive.google.com/uc?export=download&id=1aNNROgyMsPEZuXodg5J7NL8RXOvtZpcI">https://drive.google.com/uc?export=download&id=1aNNROgyMsPEZuXodg5J7NL8RXOvtZpcI</a></td></tr>
 </table></body></html>
