--- a/index.html
+++ b/index.html
@@ -4,5 +4,5 @@
 <tr>
 <th>題名</th><th>著者</th><th>読み手</th><th>容量</th><th>再生時間</th>
 </tr>
-<tr class="14><td><a href="https://drive.google.com/uc?export=download&id=1AROQrEEClizBGEz5CzFQ4R7sbbKqyjjG">杜子春</a></td><td>芥川竜之介</td><td>冥鳴ひまり</td><td>63.72 MiB</td><td>0:23:12</td></tr>
+<tr><td><a href="https://drive.google.com/uc?export=download&id=1AROQrEEClizBGEz5CzFQ4R7sbbKqyjjG">杜子春</a></td><td>芥川竜之介</td><td>冥鳴ひまり</td><td>63.72 MiB</td><td>0:23:12</td></tr>
 </table></body></html>
