--- a/index.html
+++ b/index.html
@@ -25,4 +25,5 @@
 <tr><td><a href="https://drive.google.com/uc?export=download&id=1UhQHA4RcSJZt7m0Q5SA1MGG4BJ32YD1j">ヴィヨンの妻</a></td><td>太宰治</td><td>四国めたん-ノーマル</td><td>5.64 KiB</td><td>0:00:00</td></tr>
 <tr><td><a href="https://drive.google.com/uc?export=download&id=1J21kbnkBOx5ygRIcogRw3vR-BniVeroa">ヴィヨンの妻</a></td><td>太宰治</td><td>雨晴はう-ノーマル</td><td>5.78 KiB</td><td>0:00:00</td></tr>
 <tr><td><a href="https://drive.google.com/uc?export=download&id=1rWspytPYP6M4q5i2wiQPyXAMedAFVD3u">ヴィヨンの妻</a></td><td>太宰治</td><td>春日部つむぎ-ノーマル</td><td>5.63 KiB</td><td>0:00:00</td></tr>
+<tr><td><a href="https://drive.google.com/uc?export=download&id=1wRxMh38xOzP9i3MuEjYQepQ_9oXzQ62Z">黒死館殺人事件</a></td><td>小栗虫太郎</td><td>四国めたん-ノーマル</td><td>105.41 KiB</td><td>0:00:02</td></tr>
 </table></body></html>
