--- a/index.html
+++ b/index.html
@@ -5,4 +5,5 @@
 <th>題名</th><th>著者</th><th>読み手</th><th>容量</th><th>再生時間</th>
 </tr>
 <tr><td><a href="https://drive.google.com/uc?export=download&id=1Jh7KI9WEOzdRuNdzM8_ec4ofPqycN6_Y">ヴィヨンの妻</a></td><td>太宰治</td><td>春日部つむぎ-ノーマル</td><td>153 MiB</td><td>0:55:44</td></tr>
+<tr><td><a href="https://drive.google.com/uc?export=download&id=1JvfDNrp00RumB4JtzuA2l2ojV_5279Ym">羅生門</a></td><td>芥川竜之介</td><td>ずんだもん-ノーマル</td><td>2.23 MiB</td><td>0:00:48</td></tr>
 </table></body></html>
